# Python

./: .gitignore  01 - Base.ipynb  Cópia_de_Untitled6.ipynb  Listar_arquivos.ipynb  button.py  pyproject.toml  teste se esta instalado.ipynb  teste.py
.tmp.driveupload/: 5397  5399  5401  5403  5405  5407  5409  5411  5413  5415  5417  5419  5421  5423  5425  5427  5429  5431  5433  5435  5437  5439  5441  5443  5445  5447  5449  5451  5453  5455  5457  5459  5461  5463  5465  5467  5469  5471  5473  5475  (+10 more)
01 - PowerShell/: Jupyter LAB.lnk  PowerShell 7 (x64).lnk  README.md  profile.ps1
02 - Cursos/Curso_bootcamp_Atlantico/: Pre_processamento_de_dados.ipynb  pyproject.toml
02 - Cursos/Curso_bootcamp_Atlantico/Professor/: 01_-_Valores_e_distribuicoes.ipynb  02_-_Proporcoes_e_associacoes_entre_duas_ou_mais_variaveis.ipynb  03_-_Series_temporais_e_tendencias.ipynb
06 - Dicas/: 01 - Base.ipynb  01 - Hello World.ipynb  03 - Operadores lógicos e relacionais.ipynb  04 - Operadores de Atribuição.ipynb  05 Operador  membro e Identidade.ipynb  06 Data Types.ipynb  07 - Palavras Reservadas.ipynb  08 - Listas.ipynb  09 comentários.ipynb  Beep no Colab.ipynb  Beep on Windows.ipynb  Cópia de 01 - Hello World.ipynb  Grafo.ipynb  Gráfico.ipynb  Nuvem de Palavras.ipynb  Operadores.ipynb  lista arquivos no windows.ipynb  senha no PDF.ipynb  senha_pdf.py
07 - Trabalhos/: IBGE Sidra.ipynb
Curso-Presencial-TargetTrust/: AtivoCarteira.csv  Aula 6.ipynb  Pandas.ipynb
Curso_Data_Science_do_Zero/: Leiame.txt
Exemplos/: README.md  chamaclasses.py  datas.ipynb
Oracle/: Lista.csv  (+1 more)
(+178 files in other folders)
