[tool.poetry]
name = "Estudos"
version = "0.1.0"
description = "Varias pastas usadas durante os estudo de Python"
authors = ["vilquer <vilquer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.4.2"
jupyterlab-git = "^0.37.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
