[tool.poetry]
name = "Testes"
version = "0.1.0"
description = "Testes com a base de dados da UCI"
authors = ["vilquer <vilquer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.12"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
